refactor: 멘토링 피드백 반영
- System.out.println=>log
- collect(Collectors.toList()) => toList()